expand swagger
